tests/NormalTests/paczka1/small_fuzzy/88183105.err
Error in line 2: QZyRee1t A803 44,6
Error in line 8: QZyRee1t A949 54,1
Error in line 10: QZyRee1t A803 69,4
